# lazy-settings

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
lazy_settings/conf/: __init__.py
tests/test_utils/: test_with_pytest.py
